--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,6 +1,9 @@
+html, body {
+  height: 100%;
+}
 body {
+  padding: 0px 20px;
   font-family: 'PT Sans', sans-serif;
-  padding: 20px;
   -webkit-font-smoothing: antialiased;
 }
 
