--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -105,6 +105,11 @@ article > header {
   min-height: calc(100% - 230px);
 }
 
+.tags__container {
+  max-width: 600px;
+  margin: 30px auto 0 auto;
+}
+
 .home {
   margin-top: 30px;
 }
@@ -150,6 +155,7 @@ article > header {
     border-radius: 3px;
     margin-right: 10px;
     margin-bottom: 15px;
+    font-size: 14px;
     white-space: nowrap;
     border-bottom: none;
     background-color: #f0f0f0;
@@ -185,4 +191,3 @@ article > header {
   height: auto;
   opacity: 1;
 }
-
