--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,11 +1,15 @@
 <div class="paginator">
     {% if paginator.previous_page %}
         <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"><<</a>
+    {% else %}
+        <span class="arrow__disabled"><<</span>
     {% endif %}
         
     <div class="page-num"> {{ paginator.page }} / {{ paginator.total_pages }}</div>
         
     {% if paginator.next_page %}
         <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">>></a>
+    {% else %}
+        <span class="arrow__disabled">>></span>
     {% endif %}
 </div>
