Change the font family and fix the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <p>Made using <a href="https://jekyllrb.com/">jekyll</a> on <a href="{{ site.repository }}">github</a></p>
+    <p>Made using <a href="https://jekyllrb.com/">Jekyll</a> on <a href="{{ site.repository }}">Github</a></p>
     <p>&copy; 2017 - <a href="{{ site.github }}">linytsysu</a></p>
 </footer>
