--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/icons/android-chrome-192x192.png" sizes="192x192">
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/normalize.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Upright|PT+Sans|PT+Serif|Source+Code+Pro">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Upright|Source+Sans+Pro|Source+Code+Pro">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/core.css">
 
 </head>
