--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2,18 +2,11 @@ html, body {
   height: 100%;
 }
 body {
+  font-size: 15px;
+  color: #333;
   padding: 0px 20px;
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'PT Serif', sans-serif;
 }
 
 a {
@@ -23,7 +16,6 @@ a {
 }
 
 p {
-  font-size: 15px;
   line-height: 1.6em;
 }
 
@@ -32,7 +24,7 @@ img {
 }
 
 blockquote {
-  border-left: 5px solid #ccc;
+  border-left: 5px solid #ddd;
   margin: 25px 0px;
   padding: 15px 20px;
   background: #eee;
