--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -61,7 +61,6 @@ article > header {
   }
 
   .nav__list-link {
-    font-family: "PT Serif", serif;
     color: inherit;
     text-decoration: none;
     border: 1px solid transparent;
@@ -149,6 +148,23 @@ article > header {
   }
   p {
     margin-top: 10px;
+  }
+}
+
+.archive-post__entry {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  > time {
+    min-width: 100px;
+    color: #5e5e5e;
+  }
+  > h4 {
+    margin: 15px 0;
+  }
+  a {
+    text-decoration: none;
+    border: none;
   }
 }
 
