--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -66,7 +66,7 @@ article > header {
     border: 1px solid transparent;
   }
 
-  .nav__list-link:after {
+  .nav__list-link::after {
     content: '';
     display: block;
     width: 0;
@@ -75,8 +75,13 @@ article > header {
     transition: all .4s cubic-bezier(.175,.885,.32,1.075);
   }
 
-  .nav__list-link:hover:after {
+  .nav__list-link:hover::after {
     width: 100%;
+  }
+
+  .menu-bar {
+    display: none;
+    border-bottom: 0;
   }
 }
 
@@ -104,6 +109,9 @@ article > header {
 }
 
 .home {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-top: 30px;
   min-height: calc(100% - 250px);
 }
@@ -181,7 +189,7 @@ article > header {
     background-color: #f0f0f0;
     transition: all 500ms ease;
   }
-  .tag__item:before {
+  .tag__item::before {
     content: "#";
     opacity: 0.4;
   }
@@ -196,7 +204,7 @@ article > header {
   overflow: hidden;
   opacity: 0;
   transition: opacity 0.5s ease-out;
-  .tag__title:before {
+  .tag__title::before {
     content: "#";
     opacity: 0.4;
     margin-right: 4px;
