--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
         {% include header.html %}
 
         {{ content }}
+
+        <script src="{{ site.baseurl }}/assets/js/main.js"></script>
     </body>
 
     {% include footer.html %}
