--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -36,6 +36,7 @@ blockquote {
 
 code {
   color: #f14e32;
+  background: #f8f8f8;
   padding: 2px 6px;
   font-size: 14px;
   font-family: 'Source Code Pro', monospace;
