--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
 }
+
 body {
   font-size: 15px;
   color: #333;
@@ -37,7 +38,7 @@ blockquote {
 code {
   color: #f14e32;
   background: #f8f8f8;
-  padding: 2px 6px;
+  padding: 0px 6px;
   font-size: 14px;
   font-family: 'Source Code Pro', monospace;
 }
@@ -48,7 +49,7 @@ pre {
   line-height: 1.4;
   white-space: pre;
   overflow-x: auto;
-  border: 1px solid #ddd;
+  border: 1px solid #3F4A56;
   padding: 15px 15px;
   code {
     font-size: 100%;
