Add post ml-linear-regression

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+Upright|Source+Sans+Pro|Source+Code+Pro">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/core.css">
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+
 </head>
