mathjax support boldsymbol

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,12 @@
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            Tex: {
+                Macros: {bm: "\\boldsymbol"},
+            }
+        })
+    </script>
+
 </head>
